--- a/src/Page8.css
+++ b/src/Page8.css
@@ -9,7 +9,7 @@
   justify-content: space-between;
   align-items: center;
 
-  padding: 70px 100px;
+  padding: 70px 100px 0 100px;
   box-sizing: border-box;
 }
 
