--- a/src/Page4.css
+++ b/src/Page4.css
@@ -1,73 +1,74 @@
 .page4-wrapper {
+  position: relative;
   width: 100%;
-  background: #ffffff;
-  background-image: url("./page1bg.png");
-  background-size: cover;
-  background-repeat: repeat;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding: 80px 0;
+  overflow: hidden;
 }
 
-.section-block {
+/* Background with 30% opacity */
+.page4-wrapper::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("./page1bg.png");
+  background-size: contain;
+  background-repeat: repeat;
+  opacity: 0.3;
+  /* 👈 EXACTLY 30% */
+  z-index: 1;
+}
+
+.page4-wrapper>* {
+  position: relative;
+  z-index: 2;
+}
+
+.title-image {
+  width: 45%;
+  max-width: 500px;
+  margin-bottom: 32px;
+}
+
+
+/* For all image rows except the first one */
+.image-row {
   width: 100%;
   max-width: 1300px;
-  text-align: center;
-  margin-bottom: 120px;
+  margin: 100px auto;
+  display: flex;
+  justify-content: center;
 }
 
-.section-title {
-  font-size: 70px;
-  font-family: "Cambo", serif;
-  margin: 0;
-  font-weight: 500;
-}
 
-.center-line {
-  width: 65%;
-  height: 2px;
-  background: black;
-  margin: 20px auto 18px auto;
-}
-
-.section-sub {
-  font-size: 22px;
-  font-weight: 400;
-  color: #333;
-  margin-bottom: 30px;
-  max-width: 900px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
+/* regular section images */
 .section-image {
   width: 78%;
   max-width: 950px;
   display: block;
-  margin: 0 auto;
 }
 
-/* 📱 Responsive */
+/* top logo should be smaller */
+.title-image {
+  width: 45%;
+  max-width: 500px;
+  margin-bottom: 80px;
+}
+
+/* responsive */
 @media (max-width: 900px) {
-  .section-title {
-    font-size: 12vw;
-  }
-
-  .section-sub {
-    font-size: 4vw;
-    width: 90%;
-  }
-
-  .center-line {
-    width: 70%;
-  }
-
   .section-image {
     width: 95%;
   }
 
-  .section-block {
-    margin-bottom: 18vw;
+  .title-image {
+    width: 70%;
+    margin-bottom: 50px;
+  }
+
+  .image-row {
+    margin: 14vw auto;
   }
 }
